force-app/main/default/objects/BMCServiceDesk__SupportAssignments__c/BMCServiceDesk__SupportAssignments__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data that represents staff that are experts for a given category.</description>
    <label>Support Assignments</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>