force-app/main/default/objects/BMCServiceDesk__SupportAssignments__c/fields/BMCServiceDesk__categoryId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__categoryId__c</fullName>
    <formula>BMCServiceDesk__FKCategory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category~</label>
    <type>Text</type>
</CustomField>