force-app/main/default/objects/BMCServiceDesk__SupportAssignments__c/fields/BMCServiceDesk__FKCategory__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>BMCServiceDesk__Category__c</referenceTo>
    <relationshipLabel>Support Assignments</relationshipLabel>
    <relationshipName>Support_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>