force-app/main/default/objects/BMCServiceDesk__SupportAssignments__c/fields/BMCServiceDesk__FKUser__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>