force-app/main/default/objects/BMCServiceDesk__SupportAssignments__c/fields/BMCServiceDesk__inactive__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>