force-app/main/default/objects/BMCServiceDesk__SupportAssignments__c/fields/BMCServiceDesk__QueueId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__QueueId__c</fullName>
    <label>Queue ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>