force-app/main/default/objects/BMCServiceDesk__SupportAssignments__c/fields/BMCServiceDesk__QueueName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__QueueName__c</fullName>
    <label>Queue</label>
    <length>45</length>
    <type>Text</type>
</CustomField>