force-app/main/default/objects/BMCServiceDesk__SupportAssignments__c/fields/BMCServiceDesk__recordType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__recordType__c</fullName>
    <formula>IF(BMCServiceDesk__QueueId__c &lt;&gt; null,  $Label.bmcservicedesk__queue, $Label.bmcservicedesk__user)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>