force-app/main/default/objects/BMCServiceDesk__SupportAssignments__c/fields/BMCServiceDesk__recordTypeName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__recordTypeName__c</fullName>
    <formula>IF(BMCServiceDesk__FKUser__c &lt;&gt; null, BMCServiceDesk__FKUser__r.Username,BMCServiceDesk__QueueName__c)</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>